--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </a>
 
         <footer>
-            <p>For monetization compliance, make sure <code>app-ads.txt</code> is hosted at <code>https://yourdomain.com/app-ads.txt</code>.</p>
+            <p>&copy; 2026 Particles Game</p>
         </footer>
     </main>
 </body>
