--- a/index.html
+++ b/index.html
@@ -3,142 +3,333 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Particles Game</title>
+    <title>Live: Neon Dodge Survival</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Clash+Display:wght@500;600&family=Space+Grotesk:wght@400;500;600&display=swap');
+
         :root {
             color-scheme: dark;
-            --bg: radial-gradient(circle at top, #1b2735, #090a0f 60%);
-            --card: rgba(13, 17, 23, 0.85);
-            --accent: #ffd166;
-            --accent-strong: #ff7b00;
-            --text: #f8f8f8;
-            --muted: #b0b7c3;
+            --bg: radial-gradient(circle at 20% 20%, #2f54ff 0%, #1d1c31 45%, #09080f 80%);
+            --card: rgba(13, 15, 30, 0.85);
+            --border: rgba(255, 255, 255, 0.08);
+            --accent: #8ef6ff;
+            --accent-strong: #ff6bcb;
+            --text: #f7f8ff;
+            --muted: #b6bbd4;
+            --gradient: linear-gradient(120deg, #8ef6ff, #6b9dff, #ff6bcb);
         }
+
         * { box-sizing: border-box; }
         body {
             margin: 0;
-            font-family: "Space Grotesk", "Segoe UI", system-ui, -apple-system, sans-serif;
             min-height: 100vh;
             background: var(--bg);
+            font-family: 'Space Grotesk', system-ui, -apple-system, sans-serif;
             color: var(--text);
             display: flex;
-            align-items: center;
             justify-content: center;
-            padding: 2rem;
+            padding: 3rem 1.5rem 4rem;
         }
-        main {
-            width: min(960px, 100%);
-            background: var(--card);
+        .wrapper {
+            width: min(1200px, 100%);
+        }
+        .hero {
+            border: 1px solid var(--border);
+            border-radius: 32px;
+            padding: clamp(2rem, 4vw, 4rem);
+            background: rgba(6, 8, 22, 0.76);
+            box-shadow: 0 50px 120px rgba(12, 8, 43, 0.6);
+            position: relative;
+            overflow: hidden;
+        }
+        .hero::after {
+            content: "";
+            position: absolute;
+            inset: 12px;
+            border: 1px solid rgba(255,255,255,0.05);
             border-radius: 24px;
-            padding: clamp(1.5rem, 3vw, 3rem);
-            box-shadow: 0 30px 90px rgba(0,0,0,0.45);
-            border: 1px solid rgba(255,255,255,0.08);
+            pointer-events: none;
         }
-        header {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-            align-items: center;
-            justify-content: space-between;
-            border-bottom: 1px solid rgba(255,255,255,0.08);
-            padding-bottom: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-        header h1 {
+        .hero h1 {
+            font-family: 'Clash Display', sans-serif;
+            font-size: clamp(3rem, 6vw, 4.8rem);
+            letter-spacing: 0.02em;
             margin: 0;
-            font-size: clamp(2rem, 5vw, 3rem);
-            letter-spacing: 0.04em;
         }
-        header span {
-            background: rgba(255,255,255,0.08);
-            padding: 0.35rem 0.9rem;
-            border-radius: 999px;
-            font-size: 0.9rem;
+        .hero p {
+            max-width: 560px;
+            color: var(--muted);
+            line-height: 1.7;
+            margin: 1rem 0 2rem;
+        }
+        .badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.4rem;
+            letter-spacing: 0.3em;
             text-transform: uppercase;
-            letter-spacing: 0.12em;
-            color: var(--muted);
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-            gap: 1.25rem;
-            margin-bottom: 2rem;
-        }
-        .card {
-            background: rgba(255,255,255,0.03);
-            border-radius: 20px;
-            padding: 1.25rem;
-            border: 1px solid rgba(255,255,255,0.06);
-        }
-        .card h3 {
-            margin-top: 0;
-            font-size: 1.15rem;
+            font-size: 0.78rem;
+            background: rgba(255,255,255,0.08);
+            padding: 0.45rem 0.9rem;
+            border-radius: 999px;
             color: var(--accent);
-            letter-spacing: 0.06em;
-        }
-        .card p {
-            color: var(--muted);
-            line-height: 1.6;
         }
         .cta {
             display: inline-flex;
             align-items: center;
-            gap: 0.6rem;
-            text-decoration: none;
-            color: var(--bg);
-            background: linear-gradient(120deg, var(--accent), var(--accent-strong));
-            padding: 0.9rem 1.75rem;
+            gap: 0.75rem;
+            padding: 1rem 2rem;
             border-radius: 999px;
+            background: var(--gradient);
+            color: #060814;
             font-weight: 600;
-            letter-spacing: 0.05em;
+            text-decoration: none;
+            letter-spacing: 0.08em;
+            margin-right: 1rem;
             transition: transform 0.2s ease;
         }
-        .cta:hover {
-            transform: translateY(-2px);
+        .cta:hover { transform: translateY(-2px); }
+        .ghost {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.75rem;
+            padding: 1rem 1.6rem;
+            border-radius: 999px;
+            border: 1px solid rgba(255,255,255,0.2);
+            text-decoration: none;
+            color: var(--text);
+            letter-spacing: 0.08em;
         }
+        .stats {
+            margin: 2.5rem 0 0;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+            gap: 1rem;
+        }
+        .stat-card {
+            padding: 1.2rem 1.4rem;
+            background: rgba(255,255,255,0.02);
+            border: 1px solid var(--border);
+            border-radius: 18px;
+        }
+        .stat-card h3 {
+            margin: 0;
+            font-size: 2rem;
+            color: var(--accent);
+        }
+        .stat-card p { margin: 0.35rem 0 0; color: var(--muted); }
+
+        .sections {
+            margin-top: 3rem;
+            display: grid;
+            gap: 2rem;
+        }
+        .panel {
+            background: rgba(8, 10, 22, 0.65);
+            border: 1px solid var(--border);
+            border-radius: 24px;
+            padding: 2rem;
+        }
+        .panel h2 {
+            font-family: 'Clash Display', sans-serif;
+            margin: 0 0 0.4rem;
+            font-size: clamp(1.8rem, 3vw, 2.4rem);
+        }
+        .panel p { color: var(--muted); margin-bottom: 1.6rem; }
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            gap: 1.2rem;
+        }
+        .feature {
+            background: rgba(255,255,255,0.02);
+            border-radius: 18px;
+            padding: 1.4rem;
+            border: 1px solid rgba(255,255,255,0.08);
+        }
+        .feature h3 { margin-top: 0; color: var(--accent-strong); }
+        .feature p { margin-bottom: 0; }
+
+        .showcase {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
+        }
+        .mockup {
+            min-height: 220px;
+            border-radius: 20px;
+            border: 1px dashed rgba(255,255,255,0.2);
+            background: linear-gradient(135deg, rgba(142,246,255,0.15), rgba(255,107,203,0.1));
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: var(--muted);
+        }
+        .mockup span { font-size: 0.85rem; letter-spacing: 0.15em; text-transform: uppercase; }
+
+        .upgrade-band {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 1rem;
+        }
+        .upgrade-item {
+            padding: 1rem 1.2rem;
+            border-radius: 18px;
+            background: rgba(255,255,255,0.02);
+            border: 1px solid rgba(255,255,255,0.08);
+        }
+        .upgrade-item strong { display: block; color: var(--accent); margin-bottom: 0.3rem; }
+
+        .roadmap {
+            display: grid;
+            gap: 1rem;
+        }
+        .milestone {
+            padding: 1.2rem 1.4rem;
+            border-left: 3px solid var(--accent-strong);
+            background: rgba(255,255,255,0.02);
+            border-radius: 16px;
+        }
+        .milestone small { color: var(--muted); letter-spacing: 0.2em; text-transform: uppercase; }
+
         footer {
+            margin-top: 3rem;
+            text-align: center;
             color: var(--muted);
             font-size: 0.85rem;
-            text-align: center;
         }
-        footer a {
-            color: var(--accent);
-            text-decoration: none;
-        }
+        footer a { color: var(--accent); text-decoration: none; }
     </style>
 </head>
 <body>
-    <main>
-        <header>
+    <div class="wrapper">
+        <section class="hero">
+            <span class="badge">live v2.6</span>
+            <h1>Live: Neon Dodge Survival</h1>
+            <p>
+                Glide through dense particle storms, chain near-miss combos, and level up your hero with
+                score multipliers, magnet boosts, and extended power-up windows. Precision dodging meets
+                rogue-lite upgrades in a game built for tactile chaos.
+            </p>
             <div>
-                <h1>Particles</h1>
-                <p>An arcade survival game packed with dodge combos, boss fights, and upgrade chases.</p>
+                <a class="cta" href="https://play.google.com/store/apps/details?id=com.ets.live" target="_blank" rel="noopener">
+                    Play on Google Play
+                </a>
+                <a class="ghost" href="app-ads.txt" target="_blank" rel="noopener">View app-ads.txt</a>
             </div>
-            <span>v2.6</span>
-        </header>
-
-        <section class="grid">
-            <article class="card">
-                <h3>Rapid Dodge Gameplay</h3>
-                <p>Stay alive against swarms of particle enemies, chain near-misses for combo multipliers, and go head-to-head with bosses every 60 seconds.</p>
-            </article>
-            <article class="card">
-                <h3>Upgradeable Loadout</h3>
-                <p>Earn coins to unlock skins, particle trails, and gameplay upgrades including score multipliers, power-up duration boosts, and a coin magnet.</p>
-            </article>
-            <article class="card">
-                <h3>Optimized for Fluid Play</h3>
-                <p>Careful frame pacing, minimal disk I/O, and sound/vibration batching keep gameplay responsive even on mid-range hardware.</p>
-            </article>
+            <div class="stats">
+                <div class="stat-card">
+                    <h3>60 FPS</h3>
+                    <p>Hand-tuned game loop with frame pacing</p>
+                </div>
+                <div class="stat-card">
+                    <h3>20+ Upgrades</h3>
+                    <p>Score, duration, magnet & cosmetic boosts</p>
+                </div>
+                <div class="stat-card">
+                    <h3>Boss Rush</h3>
+                    <p>Mini-boss every 60 seconds with level scaling</p>
+                </div>
+                <div class="stat-card">
+                    <h3>Zero Restarts</h3>
+                    <p>Shop changes apply instantly mid-session</p>
+                </div>
+            </div>
         </section>
 
-        <a class="cta" href="https://play.google.com/store/apps/details?id=com.ets.live" target="_blank" rel="noopener">
-            Download on Google Play →
-        </a>
+        <div class="sections">
+            <section class="panel">
+                <h2>Game Pillars</h2>
+                <p>The Live experience revolves around deliberate control, expressive customization, and rewards that feel immediate.</p>
+                <div class="features-grid">
+                    <article class="feature">
+                        <h3>Reactive Controls</h3>
+                        <p>SurfaceView engine optimized with CopyOnWrite lists, smart collision radii, and boss cooldowns to keep inputs responsive.</p>
+                    </article>
+                    <article class="feature">
+                        <h3>Upgrade Economy</h3>
+                        <p>Health, score multiplier, power-up duration, and coin magnet systems stack into long-run synergies without forcing restarts.</p>
+                    </article>
+                    <article class="feature">
+                        <h3>Visual Flair</h3>
+                        <p>Skin-based palettes, trail particles, and neon UI cues reinforce your progress mid-run.</p>
+                    </article>
+                    <article class="feature">
+                        <h3>Ad-Friendly</h3>
+                        <p>Rewarded ads grant extra life bonuses, and app-ads.txt keeps monetization compliant.</p>
+                    </article>
+                </div>
+            </section>
+
+            <section class="panel">
+                <h2>In-Game Showcase</h2>
+                <p>Snapshots of the systems powering every run.</p>
+                <div class="showcase">
+                    <div class="mockup">
+                        <strong>Hero & Trails</strong>
+                        <span>dynamic palettes</span>
+                        <p>Custom skins & particle streaks cached for zero hitching.</p>
+                    </div>
+                    <div class="mockup">
+                        <strong>Power-up Layer</strong>
+                        <span>extended timers</span>
+                        <p>Duration upgrades stretch shield, slow-mo, magnet, and score boosts.</p>
+                    </div>
+                    <div class="mockup">
+                        <strong>Boss Arena</strong>
+                        <span>60s cadence</span>
+                        <p>Scaling rewards: bonus coins + XP with multiplier applied.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="panel">
+                <h2>Upgrade Matrix</h2>
+                <p>Every purchase is immediate—refreshing preferences on resume and between runs.</p>
+                <div class="upgrade-band">
+                    <div class="upgrade-item">
+                        <strong>Score Multiplier</strong>
+                        +5% score per level, including boss reward scaling.
+                    </div>
+                    <div class="upgrade-item">
+                        <strong>Power-up Duration</strong>
+                        +20% timer extension for shield, slow-mo, magnet, and 2x score boosts.
+                    </div>
+                    <div class="upgrade-item">
+                        <strong>Coin Magnet</strong>
+                        +10% coins from milestones, power-up rewards, and boss payouts.
+                    </div>
+                    <div class="upgrade-item">
+                        <strong>Extra Health</strong>
+                        +10 HP per level at spawn; integrates with rewarded extra-life bonuses.
+                    </div>
+                </div>
+            </section>
+
+            <section class="panel">
+                <h2>Roadmap & Community</h2>
+                <div class="roadmap">
+                    <div class="milestone">
+                        <small>Shipped</small>
+                        <p>Instant upgrade refresh, bug-free resume state, and power-up stat tracking.</p>
+                    </div>
+                    <div class="milestone">
+                        <small>In QA</small>
+                        <p>Expanded high-score tables, boss variant tuning, and additional daily goals.</p>
+                    </div>
+                    <div class="milestone">
+                        <small>On Deck</small>
+                        <p>Controller-friendly HUD presets and seasonal trail packs.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
 
         <footer>
-            <p>&copy; 2026 Particles Game</p>
+            <p>&copy; 2026 Live Game. Built by Evolved Tech Stack. <a href="mailto:contact@livegameapp.co.za">contact@livegameapp.co.za</a></p>
         </footer>
-    </main>
+    </div>
 </body>
 </html>
